    your other local networks (those networks not attached to the
    bridge) in the bridge's sfilter list.

    Example:

	My DMZ is 2001:470:b:227::40/124

	My local interface (br1) is a bridge.

	In /etc/shorewall6/interfaces, I have:

	#ZONE INTERFACE BROADCAST OPTIONS
	loc   br1       -         sfilter=2001:470:b:227::40/124

----------------------------------------------------------------------------
           I I.  K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

1)  On systems running Upstart, shorewall-init cannot reliably secure
    the firewall before interfaces are brought up.

----------------------------------------------------------------------------
      I I I.  N E W   F E A T U R E S   I N   T H I S  R E L E A S E
----------------------------------------------------------------------------

1)  The implementation of the environmental variables LIBEXEC and
    PERLLIB that was introduced in 4.4.19 has been changed
    slightly. The installers now allow absolute path names to be
    supplied in these variables so that the executables and/or Perl
    modules may be installed under a top-level directory other than
    /usr. The change is compatible with 4.4.19 in that if a relative
    path name is supplied, then '/usr/' is prepended to the supplied
    name.

2)  A new ACCOUNTING_TABLE option has been added to shorewall.conf and
    shorewall6.conf. The setting determines the Netfilter table (filter
    or mangle) where accounting rules are created.

    When ACCOUNTING_TABLE=mangle, the allowable accounting file
     sections are:

	PREROUTING
        INPUT
	OUTPUT
	FORWARD
	POSTROUTING

    Present sections must appear in that order.

3)  An NFLOG 'ACTION' has been added to the accounting file to allow
    sending matching packets (or the leading part of them) to backend
    accounting daemons via a netlink socket.
