@@ -71,8 +71,6 @@ CONFIG_PATH=/etc/shorewall:/usr/share/shorewall
 
 RESTOREFILE=
 
-IPSECFILE=zones
-
 LOCKFILE=
 
 ###############################################################################
@@ -211,5 +209,12 @@ MACLIST_DISPOSITION=REJECT
 TCP_FLAGS_DISPOSITION=DROP
 
 SMURF_DISPOSITION=DROP
+
+################################################################################
+#                            L E G A C Y  O P T I O N
+#                      D O  N O T  D E L E T E  O R  A L T E R
+################################################################################
+
+IPSECFILE=zones
 
 #LAST LINE -- DO NOT REMOVE
