@@ -82,8 +82,6 @@ CONFIG_PATH=/etc/shorewall:/usr/share/shorewall
 
 RESTOREFILE=
 
-IPSECFILE=zones
-
 LOCKFILE=
 
 ###############################################################################
@@ -142,8 +140,6 @@ MODULE_SUFFIX=ko
 DISABLE_IPV6=No
 
 DYNAMIC_ZONES=No
-
-PKTTYPE=Yes
 
 NULL_ROUTE_RFC1918=No
 
@@ -222,5 +218,12 @@ MACLIST_DISPOSITION=REJECT
 TCP_FLAGS_DISPOSITION=DROP
 
 SMURF_DISPOSITION=DROP
+
+################################################################################
+#                            L E G A C Y  O P T I O N
+#                      D O  N O T  D E L E T E  O R  A L T E R
+################################################################################
+
+IPSECFILE=zones
 
 #LAST LINE -- DO NOT REMOVE
