@@ -89,8 +89,6 @@ CONFIG_PATH=/etc/shorewall:/usr/share/shorewall
 
 RESTOREFILE=
 
-IPSECFILE=zones
-
 LOCKFILE=
 
 ###############################################################################
@@ -149,8 +147,6 @@ MODULE_SUFFIX=ko
 DISABLE_IPV6=No
 
 DYNAMIC_ZONES=No
-
-PKTTYPE=Yes
 
 NULL_ROUTE_RFC1918=No
 
@@ -229,5 +225,12 @@ MACLIST_DISPOSITION=REJECT
 TCP_FLAGS_DISPOSITION=DROP
 
 SMURF_DISPOSITION=DROP
+
+################################################################################
+#                            L E G A C Y  O P T I O N
+#                      D O  N O T  D E L E T E  O R  A L T E R
+################################################################################
+
+IPSECFILE=zones
 
 #LAST LINE -- DO NOT REMOVE
