@@ -73,8 +73,6 @@ CONFIG_PATH=/etc/shorewall:/usr/share/shorewall
 
 RESTOREFILE=
 
-IPSECFILE=zones
-
 LOCKFILE=
 
 ###############################################################################
@@ -198,7 +196,7 @@ EXPORTMODULES=Yes
 
 ACCOUNTING_TABLE=filter
 
-LEGACY_FASTSTART=No
+LEGACY_FASTSTART=Yes
 
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
@@ -213,5 +211,12 @@ TCP_FLAGS_DISPOSITION=DROP
 SMURF_DISPOSITION=DROP
 
 FILTER_DISPOSITION=DROP
+
+################################################################################
+#                            L E G A C Y  O P T I O N
+#                      D O  N O T  D E L E T E  O R  A L T E R
+################################################################################
+
+IPSECFILE=zones
 
 #LAST LINE -- DO NOT REMOVE
