@@ -70,6 +70,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
 	#ZONE INTERFACE BROADCAST OPTIONS
 	loc   br1       -         sfilter=2001:470:b:227::40/124
 
+3)  The obsolete PKTTYPE option has been removed from shorewall.conf
+    and the associated manpage.
+
 ----------------------------------------------------------------------------
            I I.  K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
